--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -146,7 +146,7 @@ nav ul li div {
 	/* Ajustez la hauteur selon vos besoins */
 	width: 29px;
 	background: white;
-	background: url('/public/assets/img/icons/icon-dice.svg') center/contain no-repeat;
+	background: url('../img/icons/icon-dice.svg') center/contain no-repeat;
 }
 
 .rules-icon {
@@ -155,7 +155,7 @@ nav ul li div {
 	/* Ajustez la hauteur selon vos besoins */
 	width: 29px;
 	background: white;
-	background: url('/public/assets/img/icons/icon-rules.svg') center/contain no-repeat;
+	background: url('../img/icons/icon-rules.svg') center/contain no-repeat;
 
 }
 .restart-icon {
@@ -164,7 +164,7 @@ nav ul li div {
 	/* Ajustez la hauteur selon vos besoins */
 	width: 29px;
 	background: white;
-	background: url('/public/assets/img/icons/icon-restart.svg') center/contain no-repeat;
+	background: url('../img/icons/icon-restart.svg') center/contain no-repeat;
 }
 .infos-icon {
 	position: relative;
@@ -172,7 +172,7 @@ nav ul li div {
 	/* Ajustez la hauteur selon vos besoins */
 	width: 29px;
 	background: white;
-	background: url('/public/assets/img/icons/icon-info.svg') center/contain no-repeat;
+	background: url('../img/icons/icon-info.svg') center/contain no-repeat;
 }
 
 
@@ -180,17 +180,24 @@ nav ul li div {
 
 .bg-red {
 	background: #940000;
+	/* width: 80%; */
+	border-radius: 8px;
+	
 }
 .box-content-game {
-	height: 50vh;
-	background-image: url(../img/background/table2.png);
-	border-radius: 0px 0px 8px 8px;
+	height: 45vh;
+	background-image: url(../img/background/table1.png);
+	border-radius: 8px 8px 8px 8px;
+	border: 15px solid #DEB887;
+	transform: perspective(500px) rotateX(-150deg);
+	margin: 0% 12%;
+	transform-origin: 45 45;
 }
 .bg-gold {
 	background: #DCB253;
 }
 .box-content-score {
-	height: 50vh;
+	height: 46vh;
 	background: #FFFFFF;
 	border-radius: 0px 0px 8px 8px;
 	overflow-y: scroll;
@@ -213,34 +220,27 @@ nav ul li div {
 
 
 /* PLACEMENTS/ANIMATIONS DES DES SUR LA TABLE */
+
+
+@media (min-width: 433px) {
 .des0 {
 	margin-left: 6%;
 	margin-top: 12vh;
 	transform: rotate(4deg); 
 }
 .des1 {
-    margin-left: 8vh;
-    /* margin-top: 2vh; */
-    transform: rotate(-5deg); 
+	margin-left: 12vh;
+	/* margin-top: 2vh; */
+	transform: rotate(-5deg); 
 }
 .des2 {
-    margin-left: 10vh;
-    /* margin-top: 6vh; */
-    transform: rotate(22deg); 
+	margin-left: 16vh;
+	/* margin-top: 6vh; */
+	transform: rotate(22deg); 
 }
 .des3 {
-    margin-left: 18vh;
-    margin-top: 13vh;
-    transform: rotate(-15deg); 
-}
-.des4 {
-    margin-left: 8vh;
-    margin-top: 3vh;
-    transform: rotate(-5deg); 
-}
-.des3 {
-	margin-left: 18vh;
-	margin-top: 13vh;
+	margin-left: 10vh;
+	margin-top: 2vh;
 	transform: rotate(-15deg); 
 }
 .des4 {
@@ -248,12 +248,46 @@ nav ul li div {
 	margin-top: 3vh;
 	transform: rotate(-5deg); 
 }
+}
+
+@media (max-width: 433px) {
+.des0 {
+	margin-left: 6vh;
+	margin-top: 8vh;
+	transform: rotate(4deg); 
+	/* border: solid 4px #ffffff; */
+}
+.des1 {
+	margin-left: 1vh;
+	margin-top: -4vh;
+	transform: rotate(-5deg); 
+	/* border: solid 4px #ffffff; */
+}
+.des2 {
+	margin-left: 16vh;
+	margin-top: -2vh;
+	transform: rotate(22deg); 
+	/* border: solid 4px #ffffff; */
+}
+.des3 {
+	margin-left: 8vh;
+	margin-top: 1vh;
+	transform: rotate(-15deg); 
+	/* border: solid 4px #ffffff; */
+}
+.des4 {
+	margin-left: 3vh;
+	margin-top: 3vh;
+	transform: rotate(-5deg); 
+	/* border: solid 4px #ffffff; */
+}
+}
 
 
 .selected-dice{
-	border: solid;
+	border: solid 4px;
 	border-radius: 10px;
-	border-color: green;
+	border-color: rgb(255, 255, 255);
 }
 
 /* TABLEAU DES SCORES */
@@ -284,3 +318,8 @@ th {
 	text-align: center;
 }
 
+.dices-custom {
+	/* filter: drop-shadow(0 -6mm 4mm #000000);
+	filter: drop-shadow(0 0 0.75rem #000000); */
+	filter: drop-shadow(-16px -16px 4px #000000);
+}
