--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -53,11 +53,13 @@ body {
 
 /* NAVBAR (OUI TOUT CA..) */
 .bg-nav {
-	background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0) 100%);
+	/* background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0) 100%); */
 	box-shadow: 0 0 25px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
 	min-height: 14vh;
 	max-height: 14vh;
 	padding-top: 1vh;
+	background: linear-gradient(90deg, #051D3B 100%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgb(255, 255, 255) 100%);
+	
 }
 
 nav {
@@ -104,6 +106,7 @@ nav ul li {
 		transform: perspective(400px) rotateX(-90deg);
 		transform-origin: 45 45;
 		transition: all .4s ease-in;
+		font-family: "Luckiest Guy";
 	}
 
 	nav ul li:nth-child(1):after {
