--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,7 @@
 
 header {
 	text-align: center;
-	padding: 20px 0;
+	padding: 20px 0px;
 }
 
 h1 {
@@ -55,8 +55,8 @@ body {
 .bg-nav {
 	/* background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgba(255, 255, 255, 0) 100%); */
 	box-shadow: 0 0 25px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
-	min-height: 14vh;
-	max-height: 14vh;
+	min-height: 15vh;
+	max-height: 15vh;
 	padding-top: 1vh;
 	background: linear-gradient(90deg, #051D3B 100%, rgba(255, 255, 255, 0.2) 25%, rgba(255, 255, 255, 0.2) 75%, rgb(255, 255, 255) 100%);
 	
