--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,9 @@
 /* NATIF ET SETS BOOTSTRAP */
 
+#particles-js {
+	width: 100%;
+	height: 100vh;
+}
 
 header {
 	text-align: center;
@@ -25,6 +29,7 @@ h2 {
 
 body {
 	background: #051D3B !important;
+	/* background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5), rgba(0,0,0,0.5)); */
 	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
